--- a/sponsors.html
+++ b/sponsors.html
@@ -67,6 +67,19 @@
         </div>
     </div> -->
 
+        <!-- FOOTER -->
+    </section><footer class="site-footer">
+        <div class="logo-left">
+            <img src="/images/Logo.svg" alt="pic" id="Logo">
+        </div>
+        <div class="footer-container">
+            <p>Copyright © CavBots<br>Team 7492</p>
+        </div>
+        <div class="logo-right">
+            <img src="/images/Logo.svg" alt="pic" id="Logo">
+        </div>
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
