--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <title>CavBots Website</title>
-    <link rel="shortcut_icon" type="image/png" href="/images/CavBotsFavicon.png">
+    <link rel="shortcut icon" type="image/png" href="/images/sword.ico"> 
+    <link rel="apple-touch-icon" href="/images/sword.png">
 
 </head>
 <body>
