--- a/sponsors.html
+++ b/sponsors.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="/images/sword.ico"> 
+    <link rel="apple-touch-icon" href="/images/sword.png">
 </head>
 <body>
     <!-- NAVMENU -->
