--- a/seasons.html
+++ b/seasons.html
@@ -42,6 +42,7 @@
           <p>A brief timeline of our achievements throughout our seasons.  
             Although we are a young team, we have grown each season and have 
             shown in the past we can still be triumphant.</p>
+            <img src="/images/CavBotsGen.jpg" alt="pic" id="CavBotsGen">
         </div>
     </div>
 
