--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Texas from The Woodlands College Park High School. Each year, we compete in the 
                 FIRST Robotics Competition, in which teams of  students come together to build a 
                 robot that competes in the challenge for the year. CavBots is a student-led FRC 
-                team that is commited to providing our members and community with hands-on STEM 
+                team that is committed to providing our members and community with hands-on STEM 
                 education. We use robotics as an opportunity to show to students that STEM careers 
                 can be enjoyable and rewarding. Although we are a young team, we have grown each season and have 
                 shown in the past we can still be triumphant.</p>
