--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -53,7 +53,7 @@
         <div class="levels-container left">
             <div class="level-content">
                 <img src="/images/platinum.svg" alt="pic" id="levelPic">
-                <p>$10,000+ <br> <br> Recognized by: web and social media, logo on competition pit, 
+                <p> <br> $10,000+ <br> <br> Recognized by: web and social media, logo on competition pit, 
                     logo on CavBots robot, and prominent front page website recognition.</p>
             </div>
         </div>
