--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -53,27 +53,27 @@
         <div class="levels-container left">
             <div class="level-content">
                 <img src="/images/platinum.svg" alt="pic" id="levelPic">
-                <p> <br> $10,000+ <br> <br> Recognized by: web and social media, logo on competition pit, 
+                <p> $10,000+ <br> Recognized by: web and social media, logo on competition pit, 
                     logo on CavBots robot, and prominent front page website recognition.</p>
             </div>
         </div>
         <div class="levels-container right">
             <div class="level-content">
                 <img src="/images/gold.svg" alt="pic" id="levelPic">
-                <p>Webpage/social media recognition, name on competition 
+                <p> $5,000 to $9,999 <br> Webpage/social media recognition, name on competition 
                     pit, and logo or name on CavBots robot.</p>
             </div>
         </div>
         <div class="levels-container left">
             <div class="level-content">
                 <img src="/images/silver.svg" alt="pic" id="levelPic">
-                <p>Webpage/social media ads and name on competition pit.</p>
+                <p> $1,000 to $4,999 <br> Webpage/social media ads and name on competition pit.</p>
             </div>
         </div>
         <div class="levels-container right">
             <div class="level-content">
                 <img src="/images/copper.svg" alt="pic" id="levelPic">
-                <p>Webpage/social media ads</p>
+                <p> $250 to $999 <br> Webpage/social media ads</p>
                 <p>**We DO accept and appreciate donations less than this**</p>
             </div>
         </div>
