--- a/sponsors.html
+++ b/sponsors.html
@@ -46,8 +46,8 @@
     </div>
 
     <!-- LIST OF SPONSORS -->
-    <!-- <div class="sponsorsFlexbox-container">
-        <div class="sponsor-item">
+    <div class="sponsorsFlexbox-container">
+    <!--<div class="sponsor-item">
             <div class="platinum-box">
                 <h1>Platinum</h1>
             </div>
@@ -56,21 +56,36 @@
             <div class="gold-box">
                 <h1>Gold</h1>
             </div>
-        </div>
+        </div> -->
         <div class="sponsor-item">
             <div class="silver-box">
                 <h1>Silver</h1>
+            </div>
+
+            <div class="list-content">
+                <img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/LCP Logo 1.JPG" alt="pic" id="sponsorPic">
+                <img src="/images/LSDP Manufacturing Logo 1.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/IMG_6446.jpg" alt="pic" id="sponsorPic">
             </div>
         </div>
         <div class="sponsor-item">
             <div class="bronze-box">
                 <h1>Bronze</h1>
             </div>
+
+            <div class="list-content">
+                <img src="/images/AppliedPhysics.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/ASAPcollection.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/heritageSanitation.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/rimeDownhole.jpg" alt="pic" id="sponsorPic">
+            </div>
         </div>
-    </div> -->
+    </div> 
 
         <!-- FOOTER -->
-    </section><footer class="site-footer">
+    <!-- </section><footer class="site-footer">
         <div class="logo-left">
             <img src="/images/Logo.svg" alt="pic" id="Logo">
         </div>
@@ -80,7 +95,7 @@
         <div class="logo-right">
             <img src="/images/Logo.svg" alt="pic" id="Logo">
         </div>
-    </footer>
+    </footer> -->
 
     <script src="app.js"></script>
 </body>
