--- a/sponsors.html
+++ b/sponsors.html
@@ -65,9 +65,9 @@
             <div class="list-content">
                 <img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/LCP Logo 1.JPG" alt="pic" id="sponsorPic">
-                <img src="/images/LSDP Manufacturing Logo 1.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/IMG_6446.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/lifeCyclePower.JPG" alt="pic" id="sponsorPic">
+                <img src="/images/LSDPmanufactring.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/walkerFamily.jpg" alt="pic" id="sponsorPic">
             </div>
         </div>
         <div class="sponsor-item">
