--- a/sponsors.html
+++ b/sponsors.html
@@ -40,7 +40,7 @@
     <div class="sponsors">
         <div class="sponsors-container">
             <h1>Sponsors</h1>
-            <p>We are incredibly thankful to the following organizations and families that keep our team running!<br>The 2022-23 sponsors list is not yet finalized.</p>
+            <p>We are incredibly thankful to the following organizations and families that keep our team running!</p>
             <button class="sponsor-btn"><a href="/sponsorInfo.html">Click this if you want to learn more about becoming a sponsor</a></button>
         </div>
     </div>
