--- a/sponsors.html
+++ b/sponsors.html
@@ -61,7 +61,6 @@
             <div class="silver-box">
                 <h1>Silver</h1>
             </div>
-
             <div class="list-content">
                 <img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
@@ -74,10 +73,10 @@
             <div class="bronze-box">
                 <h1>Bronze</h1>
             </div>
-
             <div class="list-content">
                 <img src="/images/AppliedPhysics.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/ASAPcollection.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/banht.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/heritageSanitation.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/rimeDownhole.jpg" alt="pic" id="sponsorPic">
             </div>
