--- a/seasons.html
+++ b/seasons.html
@@ -93,7 +93,7 @@
                   we competed at the Texas District Champtionship. During this competition, 
                   we were able to get the first triple traversal in the world during playoffs! 
                   We have gained a lot of knowledge over the past four years, and our robot 
-                  reflects that. With a tracking turrent and swerve drive we created an 
+                  reflects that. With a tracking turret and swerve drive we created an 
                   advanced robot.</p>
             </div>
         </div>
