commit on origin

--- a/sponsors.html
+++ b/sponsors.html
@@ -64,6 +64,7 @@
             <div class="list-content">
                 <img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
+                <img src="/images/eliteSeal.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/lifeCyclePower.JPG" alt="pic" id="sponsorPic">
                 <img src="/images/LSDPmanufactring.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/walkerFamily.jpg" alt="pic" id="sponsorPic">
