commit on origin

--- a/outreach.html
+++ b/outreach.html
@@ -64,10 +64,9 @@
                 <p>We created a public build blog for several reasons - primarily, we believe 
                     that having documentation is beneficial long-term for both people in and 
                     out of the team. Plus, for families, friends, teachers, and sponsors, being 
-                    able to follow the team makes it feel much more personal. Additionally, we 
-                    believe that the community can give us direct help with our robot; by posting 
-                    both the good and bad of our team, other people can learn from the good and 
-                    bad, and we can get help with the stuff our team may be struggling with.</p>
+                    able to follow the team makes it feel much more personal. Additionally, we are 
+                    transparent about our progress, sharing both the good and the bad, so others 
+                    can learn from what we encounter and struggle with throughout the season. .</p>
             </div>
         </div>
         <div class="outreachList-item left">
