--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div class="main-container">
             <div class="main-content">
                 <h1>CAVBOTS 7492</h1>
-                <button class="main-btn"><a href="sponsors.html">Sponsors</a></button>
+                <!-- <button class="main-btn"><a href="sponsors.html">Sponsors</a></button> -->
+                <button class="main-btn"><a href="https://www.paypal.com/US/fundraiser/charity/3928006">Donate Now!</a></button>
                 <!-- <img src="/images/Logo.svg" alt="pic" id="CavBotsLogo"> -->
             </div>
         </div>
