commit on origin

--- a/sponsors.html
+++ b/sponsors.html
@@ -62,7 +62,7 @@
                 <h1>Silver</h1>
             </div>
             <div class="list-content">
-                <img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic">
+                <a herf="https://www.advacardio.com"><img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic"> </a>
                 <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/eliteSeal.jpg" alt="pic" id="sponsorPic">
                 <img src="/images/lifeCyclePower.JPG" alt="pic" id="sponsorPic">
