commmit on origin

--- a/sponsors.html
+++ b/sponsors.html
@@ -62,11 +62,21 @@
                 <h1>Silver</h1>
             </div>
             <div class="list-content">
-                <a herf="https://www.advacardio.com"><img src="/images/AdvaCardio.jpg" alt="pic" id="sponsorPic"> </a>
-                <img src="/images/blackPearlTech.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/eliteSeal.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/lifeCyclePower.JPG" alt="pic" id="sponsorPic">
-                <img src="/images/LSDPmanufactring.jpg" alt="pic" id="sponsorPic">
+                <a href="https://www.advacardio.com/">
+                    <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
+                 </a>
+                 <a href="https://www.blackpearltechnology.com/">
+                    <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
+                 </a>
+                 <a href="https://www.elitesealinc.com/">
+                    <img alt="pic" src="/images/eliteSeal.jpg" id="sponsorPic">
+                 </a>
+                 <a href="https://www.lcpower.energy/">
+                    <img alt="pic" src="/images/lifeCyclePower.JPG" id="sponsorPic">
+                 </a>
+                 <a href="https://www.lonestardownhole.com/">
+                    <img alt="pic" src="/images/LSDPmanufactring.jpg" id="sponsorPic">
+                 </a>
                 <img src="/images/walkerFamily.jpg" alt="pic" id="sponsorPic">
             </div>
         </div>
@@ -75,11 +85,19 @@
                 <h1>Bronze</h1>
             </div>
             <div class="list-content">
-                <img src="/images/AppliedPhysics.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/ASAPcollection.jpg" alt="pic" id="sponsorPic">
+                <a href="https://www.appliedphysics.com/">
+                    <img alt="pic" src="/images/AppliedPhysics.jpg" id="sponsorPic">
+                 </a>
+                 <a href="https://www.asapcollect.com/">
+                    <img alt="pic" src="/images/ASAPcollection.jpg" id="sponsorPic">
+                 </a>
                 <img src="/images/banht.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/heritageSanitation.jpg" alt="pic" id="sponsorPic">
-                <img src="/images/rimeDownhole.jpg" alt="pic" id="sponsorPic">
+                <a href="https://www.heritagesanitation.com/">
+                    <img alt="pic" src="/images/heritageSanitation.jpg" id="sponsorPic">
+                 </a>
+                 <a href="https://www.rime.com/">
+                    <img alt="pic" src="/images/rimeDownhole.jpg" id="sponsorPic">
+                 </a>
             </div>
         </div>
     </div> 
