commit on origin

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2>Contact Us</h2>
           <h6>Send us a message or check out our socials!</h6>
           <div class="social-icons">
-            <a href="mailto:cavbotsstudents@gmail.com" target="_blank" class="fa-solid fa-envelope"></a>
+            <a href="mailto:sjordan@conroeisd.net" target="_blank" class="fa-solid fa-envelope"></a>
             <a href="https://www.instagram.com/cavbots_7492/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
             <a href="https://github.com/CAVALIER-ROBOTICS" target="_blank" class="fa-brands fa-github"></a>
             <a href="https://www.youtube.com/channel/UCJYdM5ucSG2sFMD3Sy4ARrA" target="_blank" class="fa-brands fa-youtube"></a>
