--- a/outreach.html
+++ b/outreach.html
@@ -49,16 +49,6 @@
     <div class="outreachList">
         <div class="outreachList-item left">
             <div class="list-content">
-                <h1>Mentoring FLL Teams</h1>
-                <img src="/images/FLL.svg" alt="pic" id="OutreachPic">
-                <p>Currently, we mentor at three different elementary and intermediate public 
-                    schools in Houston, Texas. Every one of us has had fantastic experiences 
-                    with FIRST, and we need to share that with the children in our community. 
-                    We understand that by mentoring FLL teams we are encouraging future STEM leaders. </p>
-            </div>
-        </div>
-        <div class="outreachList-item right">
-            <div class="list-content">
                 <h1>OpenAlliance Build Blog</h1>
                 <img src="/images/OpenAll.svg" alt="pic" id="OutreachPic">
                 <p>We created a public build blog for several reasons - primarily, we believe 
@@ -66,7 +56,19 @@
                     out of the team. Plus, for families, friends, teachers, and sponsors, being 
                     able to follow the team makes it feel much more personal. Additionally, we are 
                     transparent about our progress, sharing both the good and the bad, so others 
-                    can learn from what we encounter and struggle with throughout the season. .</p>
+                    can learn from what we encounter and struggle with throughout the season.</p>
+                    <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2023-build-blog/419193">2023 Build Blog</a></p>
+                    <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2022-build-blog/398060">2022 Build Blog</a></p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Mentoring FLL Teams</h1>
+                <img src="/images/FLL.svg" alt="pic" id="OutreachPic">
+                <p>Currently, we mentor at three different elementary and intermediate public 
+                    schools in Houston, Texas. Every one of us has had fantastic experiences 
+                    with FIRST, and we need to share that with the children in our community. 
+                    We understand that by mentoring FLL teams we are encouraging future STEM leaders. </p>
             </div>
         </div>
         <div class="outreachList-item left">
@@ -85,7 +87,7 @@
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Robot Demos</h1>
-                <img src="/images/RobotDemo.svg" alt="pic" id="OutreachPic">
+                <img src="/images/RobotDemo.jpg" alt="pic" id="OutreachPic">
                 <p>We do demonstrations of our robot to our school for our team so we can connect 
                     with the students in our school who express an interest in STEM. Our goal is 
                     to encourage our classmates to learn more about robotics and what CavBots represents.</p>
