commit on origin

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>CAVBOTS 7492</h1>
                 <!-- <button class="main-btn"><a href="sponsors.html">Sponsors</a></button> -->
                 <button class="main-btn"><a href="https://www.paypal.com/US/fundraiser/charity/3928006">Donate Now!</a></button>
-                <!-- <img src="/images/Logo.svg" alt="pic" id="CavBotsLogo"> -->
+                <img src="/images/CavBotsLogo.png">
             </div>
         </div>
     </div>
