--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- NAVMENU -->
     <div class="nav-container">
         <nav class="navbar">
+            <!-- <img src="images/CavBotsLogo.png"> -->
             <a href="index.html" id="navbar-logo">CavBots 7492</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
