--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
     <!-- HERO SECTION -->
     <div class="main">
         <div class="main-container">
-            <div class="main-content">
-                <h1>CAVBOTS 7492</h1>
-                <div class="logo-container">
-                    <div class="logo-content">
-                    <img src="images/CavBotsLogo.png">
-                    </div>
+                <div class="main-content">
+                    <h1>CAVBOTS 7492</h1>
                 </div>
-
-                <!-- <button class="main-btn"><a href="sponsors.html">Sponsors</a></button> -->
-                <button class="main-btn"><a href="https://www.paypal.com/US/fundraiser/charity/3928006">Donate Now!</a></button>
-                <!-- <img src="/images/CavBotsLogo.png"> -->
+                <div class="main-content">
+                    <img src="images/CavBotsLogo.png">
+                </div>
+                <div class="main-content">
+                    <h1><button class="main-btn"><a href="https://www.paypal.com/US/fundraiser/charity/3928006">Donate Now!</a></button></h1>
+                </div>
             </div>
         </div>
     </div>
