commit on origin

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <li><a href="sponsors.html" class="nav-links">Sponsors</a></li>  
               <li><a href="outreach.html" class="nav-links">Outreach</a></li>  
               <li><a href="index.html#contactID" class="nav-links">Contact Us</a></li>  
+              <li><a href="#" class="nav-logo"> <img src="/images/CavBotsLogo.png"> </a></li>  
             </ul>
         </nav>
     </div>
