--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -83,13 +83,13 @@
     <!-- FOOTER -->
     </section><footer class="site-footer">
         <div class="logo-left">
-            <img src="/images/Logo.svg" alt="pic" id="Logo">
+            <img src="/images/CavBotsLogo.png" alt="pic" id="Logo">
         </div>
         <div class="footer-container">
             <p>Copyright © CavBots<br>Team 7492</p>
         </div>
         <div class="logo-right">
-            <img src="/images/Logo.svg" alt="pic" id="Logo">
+            <img src="/images/CavBotsLogo.png" alt="pic" id="Logo">
         </div>
     </footer>
 
