commit on origin

--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -82,15 +82,15 @@
 
     <!-- FOOTER -->
     </section><footer class="site-footer">
-        <div class="logo-left">
+        <!-- <div class="logo-left">
             <img src="/images/CavBotsLogo.png" alt="pic" id="Logo">
-        </div>
+        </div> -->
         <div class="footer-container">
             <p>Copyright © CavBots<br>Team 7492</p>
         </div>
-        <div class="logo-right">
+        <!-- <div class="logo-right">
             <img src="/images/CavBotsLogo.png" alt="pic" id="Logo">
-        </div>
+        </div> -->
     </footer>
 
     <script src="app.js"></script>
