commit on origin

--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -44,7 +44,7 @@
                 also accept donations of any amount from individuals. Every contribution of 
                 any size helps our team remain successful and sustainable, so we are extremely 
                 grateful for your help. Thank you!</p>
-            <button class="sponsorInfo-btn"><a href="https://twcp-cavalier-robotics-booster-club.square.site/">Click here to become a sponsor</a></button>
+            <button class="sponsorInfo-btn"><a href="https://my-business-802685.square.site/donations">Click here to become a sponsor</a></button>
         </div>
     </div>
 
