--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <h2>We are CavBots...</h2>
             <p>FRC team 7492 is a high school robotics team based in The Woodlands, 
                 Texas from The Woodlands College Park High School. Each year, we compete in the 
-                FIRST Robotics Competition, in which teams of  students come together to build a 
-                robot that competes in the challenge for the year. CavBots is a student-led FRC 
+                FIRST Robotics Competition, in which teams of students come together to build a 
+                robot that competes in the challenge for that year. CavBots is a student-led FRC 
                 team that is committed to providing our members and community with hands-on STEM 
                 education. We use robotics as an opportunity to show to students that STEM careers 
                 can be enjoyable and rewarding. Although we are a young team, we have grown each season and have 
