Updated site for 2023

--- a/outreach.html
+++ b/outreach.html
@@ -93,6 +93,21 @@
                     to encourage our classmates to learn more about robotics and what CavBots represents.</p>
             </div>
         </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>YMCA Gift Wrapping</h1>
+                <img alt="pic" src="/images/YMCAGiftWrapping.png" id="OutreachPic">
+                <p>We volunteered with the YMCA at a local church to wrap presents for those in need.</p>
+            </div>
+        </div>
+        <div class="outreachList-item right">
+            <div class="list-content">
+                <h1>Cars and Coffee</h1>
+                <img alt="pic" src="/images/carsandcoffee.png" id="OutreachPic">
+                <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. This drummed up interest in our
+                    team as well as STEM as a whole.</p>
+            </div>
+        </div>
     </div>
 
     <!-- FOOTER -->
