--- a/sponsors.html
+++ b/sponsors.html
@@ -47,37 +47,44 @@
 
     <!-- LIST OF SPONSORS -->
     <div class="sponsorsFlexbox-container">
-    <!--<div class="sponsor-item">
+    <div class="sponsor-item">
             <div class="platinum-box">
                 <h1>Platinum</h1>
+            </div>
+            <div class="list-content">
+                <a href="https://blackpearltechnology.com/">
+                    <img alt="pic" src ="/images/blackPearlTech.jpg" id="sponsorPicLarge">
+                </a>
             </div>
         </div>
         <div class="sponsor-item">
             <div class="gold-box">
                 <h1>Gold</h1>
             </div>
-        </div> -->
+            <div class="list-content">
+                <img alt="pic" src="/images/aufegger.png" id="sponsorPic">
+            </div>
+        </div>
         <div class="sponsor-item">
             <div class="silver-box">
                 <h1>Silver</h1>
             </div>
             <div class="list-content">
+                <a href="https://www.taktikaltech.com/">
+                    <img alt="pic" src="/images/tactical_even_whitespace.png" id="sponsorPic">
+                </a>
+                <a href="https://www.lcpower.energy/">
+                    <img alt="pic" src="/images/lifeCyclePower.JPG" id="sponsorPic">
+                </a>
+                <a href="https://www.elitesealinc.com/">
+                    <img alt="pic" src="/images/eliteSeal.jpg" id="sponsorPic">
+                </a>
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
-                 </a>
-                 <a href="https://www.blackpearltechnology.com/">
-                    <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
-                 </a>
-                 <a href="https://www.elitesealinc.com/">
-                    <img alt="pic" src="/images/eliteSeal.jpg" id="sponsorPic">
-                 </a>
-                 <a href="https://www.lcpower.energy/">
-                    <img alt="pic" src="/images/lifeCyclePower.JPG" id="sponsorPic">
-                 </a>
-                 <a href="https://www.lonestardownhole.com/">
-                    <img alt="pic" src="/images/LSDPmanufactring.jpg" id="sponsorPic">
-                 </a>
-                <img src="/images/walkerFamily.jpg" alt="pic" id="sponsorPic">
+                </a>
+                <a href="https://www.grahamdentalatx.com/">
+                    <img alt="pic" src="/images/grahamandgarza.jpg" id="sponsorPic">
+                </a>
             </div>
         </div>
         <div class="sponsor-item">
@@ -85,18 +92,16 @@
                 <h1>Bronze</h1>
             </div>
             <div class="list-content">
-                <a href="https://www.appliedphysics.com/">
-                    <img alt="pic" src="/images/AppliedPhysics.jpg" id="sponsorPic">
-                 </a>
                  <a href="https://www.asapcollect.com/">
                     <img alt="pic" src="/images/ASAPcollection.jpg" id="sponsorPic">
                  </a>
-                <img src="/images/banht.jpg" alt="pic" id="sponsorPic">
-                <a href="https://www.heritagesanitation.com/">
+
+                 <a href="https://www.heritagesanitation.com/">
                     <img alt="pic" src="/images/heritageSanitation.jpg" id="sponsorPic">
                  </a>
-                 <a href="https://www.rime.com/">
-                    <img alt="pic" src="/images/rimeDownhole.jpg" id="sponsorPic">
+                 
+                 <a href="https://www.remax.com/real-estate-agents/carol-knott-tefft-tomball-tx/100014748">
+                    <img alt="pic" src="/images/remax.jpg" id="sponsorPic">
                  </a>
             </div>
         </div>
