--- a/outreach.html
+++ b/outreach.html
@@ -96,7 +96,7 @@
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>YMCA Gift Wrapping</h1>
-                <img alt="pic" src="/images/YMCAGiftWrapping.png" id="OutreachPic">
+                <img alt="pic" src="/images/giftwrapping.png" id="OutreachPic">
                 <p>We volunteered with the YMCA at a local church to wrap presents for those in need.</p>
             </div>
         </div>
