--- a/sponsors.html
+++ b/sponsors.html
@@ -47,11 +47,15 @@
 
     <!-- LIST OF SPONSORS -->
     <div class="sponsorsFlexbox-container">
-    <!--<div class="sponsor-item">
+        <div class="sponsor-item">
             <div class="platinum-box">
                 <h1>Platinum</h1>
+                <a href="https://www.blackpearltechnology.com/">
+                    <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
+                 </a>
             </div>
         </div>
+        <!--
         <div class="sponsor-item">
             <div class="gold-box">
                 <h1>Gold</h1>
@@ -64,9 +68,6 @@
             <div class="list-content">
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
-                 </a>
-                 <a href="https://www.blackpearltechnology.com/">
-                    <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
                  </a>
                  <a href="https://www.elitesealinc.com/">
                     <img alt="pic" src="/images/eliteSeal.jpg" id="sponsorPic">
