--- a/sponsors.html
+++ b/sponsors.html
@@ -51,9 +51,11 @@
             <div class="platinum-box">
                 <h1>Platinum</h1>
             </div>
+            <div class="list-content"></div>
             <a href="https://www.blackpearltechnology.com/">
                 <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
              </a>
+            </div>
         </div>
         <!--
         <div class="sponsor-item">
