--- a/sponsors.html
+++ b/sponsors.html
@@ -51,7 +51,7 @@
             <div class="platinum-box">
                 <h1>Platinum</h1>
             </div>
-            <div class="list-content"></div>
+            <div class="list-content">
             <a href="https://www.blackpearltechnology.com/">
                 <img alt="pic" src="/images/blackPearlTech.jpg" id="sponsorPic">
              </a>
