--- a/seasons.html
+++ b/seasons.html
@@ -102,7 +102,7 @@
                 <h2>2023</h2>
                 <p>In this season, Charged Up, CavBots consisted of 35 team members.
                     We were able to build two robots this year, a practice bot and the competition bot "Kraken".
-                    We competed at Chanellview and Amarillo and won the Creativity Award thanks to our unique suction cup vacuum system.
+                    We competed at Channelview and Amarillo and won the Creativity Award thanks to our unique suction cup vacuum system.
                     During offseason at the Texas Robotics Invitational (TRI), our all-girl drive team placed second.
                 </p>
             </div>
