--- a/sponsors.html
+++ b/sponsors.html
@@ -82,9 +82,9 @@
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
                 </a>
-                <a href="https://www.grahamdentalatx.com/">
+                <!-- <a href="https://www.grahamdentalatx.com/">
                     <img alt="pic" src="/images/grahamandgarza.jpg" id="sponsorPic">
-                </a>
+                </a> -->
             </div>
         </div>
         <div class="sponsor-item">
