--- a/sponsors.html
+++ b/sponsors.html
@@ -53,7 +53,7 @@
             </div>
             <div class="list-content">
                 <a href="https://blackpearltechnology.com/">
-                    <img alt="pic" src ="/images/blackPearlTech.jpg" id="sponsorPicLarge">
+                    <img alt="pic" src ="/images/blackPearlTech.jpg" id="sponsorPic">
                 </a>
             </div>
         </div>
