Updated cars and coffee image and some blurbs

--- a/outreach.html
+++ b/outreach.html
@@ -97,15 +97,17 @@
             <div class="list-content">
                 <h1>YMCA Gift Wrapping</h1>
                 <img alt="pic" src="/images/giftwrapping.png" id="OutreachPic">
-                <p>We volunteered with the YMCA at a local church to wrap presents for those in need.</p>
+                <p>We volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
+                    in our community and the world around us, and helping out at the YMCA was a way of furthering that goal.</p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Cars and Coffee</h1>
-                <img alt="pic" src="/images/carsandcoffee.png" id="OutreachPic">
-                <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. This drummed up interest in our
-                    team as well as STEM as a whole.</p>
+                <img alt="pic" src="/images/coffecars_setup_good.jpg" id="OutreachPic">
+                <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
+                    We were able to introduce many of our peers to STEM and robotics. 
+                    This drummed up interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
     </div>
