--- a/outreach.html
+++ b/outreach.html
@@ -110,6 +110,13 @@
                     This drummed up interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
+        <div class="outreachList-item left">
+            <div class="list-content">
+                <h1>SNHS Day Camp</h1>
+                <img alt="pic" src="/images/krakenandunsuspectingchild.png" id="OutreachPic">
+                <p>We hosted a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
+            </div>
+        </div>
     </div>
 
     <!-- FOOTER -->
