--- a/outreach.html
+++ b/outreach.html
@@ -106,8 +106,7 @@
                 <h1>Cars and Coffee</h1>
                 <img alt="pic" src="/images/coffecars_setup_good.jpg" id="OutreachPic">
                 <p>We put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
-                    We were able to introduce many of our peers to STEM and robotics. 
-                    This drummed up interest in our team as well as STEM as a whole.</p>
+                    We were able to introduce many of our peers to STEM and robotics, which drummed up interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
         <div class="outreachList-item left">
