Fixed blurb for NSHS day camp

--- a/outreach.html
+++ b/outreach.html
@@ -111,9 +111,9 @@
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
-                <h1>SNHS Day Camp</h1>
+                <h1>NSHS Day Camp</h1>
                 <img alt="pic" src="/images/krakenandunsuspectingchild.png" id="OutreachPic">
-                <p>We hosted a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
+                <p>We participated in a day camp for local schoolchildren in order to educate these young people about our team, what we do, and STEM as a whole.</p>
             </div>
         </div>
     </div>
