Changed sponsor types to text

--- a/sponsors.html
+++ b/sponsors.html
@@ -82,9 +82,7 @@
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
                 </a>
-                <!-- <a href="https://www.grahamdentalatx.com/">
-                    <img alt="pic" src="/images/grahamandgarza.jpg" id="sponsorPic">
-                </a> -->
+                <img alt="pic" src="/images/GarzaMacielIncomeTax.jpg" id="sponsorPic">
             </div>
         </div>
         <div class="sponsor-item">
