--- a/sponsorInfo.html
+++ b/sponsorInfo.html
@@ -52,7 +52,8 @@
     <div class="levels">
         <div class="levels-container left">
             <div class="level-content">
-                <img src="/images/platinum.svg" alt="pic" id="levelPic">
+                <!-- <img src="/images/platinum.svg" alt="pic" id="levelPic"> -->
+                <h id="Platinum">Platinum</h>
                 <p> $10,000+ <br>  Prominent front page website recognition, social media 
                     acknowledgements, as well as logo on competition pit (public repair area), 
                     CavBots’ robot, and CavBots’ team shirt. </p>
@@ -60,20 +61,23 @@
         </div>
         <div class="levels-container right">
             <div class="level-content">
-                <img src="/images/gold.svg" alt="pic" id="levelPic">
+                <!-- <img src="/images/gold.svg" alt="pic" id="levelPic"> -->
+                <h id="Gold">Gold</h>
                 <p> $5,000 to $9,999 <br> Webpage and social media recognition, name on competition 
                     pit, and logo or name on CavBots robot.</p>
             </div>
         </div>
         <div class="levels-container left">
             <div class="level-content">
-                <img src="/images/silver.svg" alt="pic" id="levelPic">
+                <!-- <img src="/images/silver.svg" alt="pic" id="levelPic"> -->
+                <h id="Silver">Silver</h>
                 <p> $1,000 to $4,999 <br> Webpage and social media ads as well as name on competition pit.</p>
             </div>
         </div>
         <div class="levels-container right">
             <div class="level-content">
-                <img src="/images/copper.svg" alt="pic" id="levelPic">
+                <!-- <img src="/images/copper.svg" alt="pic" id="levelPic"> -->
+                <h id="Bronze">Bronze</h>
                 <p> $500 to $999 <br> Webpage and social media ads.</p>
                 <p>**We DO accept and appreciate donations less than this**</p>
             </div>
