Updated elite seal logo

--- a/sponsors.html
+++ b/sponsors.html
@@ -77,7 +77,7 @@
                     <img alt="pic" src="/images/lifeCyclePower.JPG" id="sponsorPic">
                 </a>
                 <a href="https://www.elitesealinc.com/">
-                    <img alt="pic" src="/images/eliteSeal.jpg" id="sponsorPic">
+                    <img alt="pic" src="/images/eliteSealBlackText.jpg" id="sponsorPic">
                 </a>
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
