--- a/sponsors.html
+++ b/sponsors.html
@@ -76,7 +76,7 @@
                 <a href="https://www.lcpower.energy/">
                     <img alt="pic" src="/images/lifeCyclePower.JPG" id="sponsorPic">
                 </a>
-                <!-- What?? ?? site not updating :( )-->
+                <!-- What?? ?? site not updating :( :() )-->
                 <a href="https://www.elitesealinc.com/">
                     <img alt="pic" src="/images/eliteSealBlackText.jpg" id="sponsorPic">
                 </a>
