--- a/outreach.html
+++ b/outreach.html
@@ -57,6 +57,7 @@
                     able to follow the team makes it feel much more personal. Additionally, we are 
                     transparent about our progress, sharing both the good and the bad, so others 
                     can learn from what we encounter and struggle with throughout the season.</p>
+                    <p><a href="https://www.chiefdelphi.com/t/cavbots-7492-2024-open-alliance-build-blog/447602">2024 Build Blog</a></p>
                     <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2023-build-blog/419193">2023 Build Blog</a></p>
                     <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2022-build-blog/398060">2022 Build Blog</a></p>
             </div>
@@ -74,6 +75,8 @@
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>COVID-19 PPE</h1>
+                <img src="/images/nursesandclips.JPG" alt="pic" id="OutreachPic">
+                <img src="/images/mightbejacob.JPG" alt="pic" id="OutreachPicStacked">
                 <p>During the unpredictable havoc of the COVID-19 pandemic, we were able to have 
                     an amazing, positive impact on the lives of so many. With schools opening up 
                     Fall of 2020, we saw a great need for ways to reduce the spread of COVID-19. 
