--- a/sponsors.html
+++ b/sponsors.html
@@ -83,7 +83,17 @@
                 <a href="https://www.advacardio.com/">
                     <img alt="pic" src="/images/AdvaCardio.jpg" id="sponsorPic">
                 </a>
+
+                <a href="https://www.energyarch.com/">
+                    <img alt="pic" src="/images/energyArchitecture.jpg" id="sponsorPic">
+                </a>
+
+                <a href="https://www.twc.texas.gov/">
+                    <img alt="pic" src="/images/twc.PNG" id="sponsorPic">
+                </a>
                 <img alt="pic" src="/images/GarzaMacielIncomeTax.jpg" id="sponsorPic">
+
+                <img alt="pic" src="/images/grahamcrestwhitebackground.png" id="sponsorPic">
             </div>
         </div>
         <div class="sponsor-item">
