Added season pictures

--- a/seasons.html
+++ b/seasons.html
@@ -52,18 +52,22 @@
         <div class="timeline-container left">
             <div class="timeline-content">
              <h2>2019</h2>
+             <img src="images/2019 robot - Monolith.jpg" alt="pic" id="seasonPic">
+             <img src="images/2019 Team Photo.jpg" alt="pic" id="seasonPic">
              <p>The 2019 season, Deep Space, was CavBot’s first competitive season. 
                 As a small team of 8 students and 1 mentor, we climbed the ranks 
                 and attended the FIRST World's competition 2019. We competed at district 
                 competitions in Channelview and Del Rio, where the team won the Highest 
                 Rookie Award and Rookie All-Star Award with our robot Monolith. Qualifying 
                 for the State competition in Austin, we earned one more rookie award, Rookie 
-                Inspiration Award. We ended our rookie season by ranking 21st at World’s. </p>
+                Inspiration Award. We ended our rookie season by ranking 21st at Worlds. </p>
             </div>
         </div>
         <div class="timeline-container right">
             <div class="timeline-content">
              <h2>2020</h2>
+             <img src="images/2020 robot hanging.jpg" alt="pic" id="seasonPic">
+             <img src="images/2020 Team Photo.JPG" alt="pic" id="seasonPic">
              <p>This season, our team grew in size and capability, now consisting of many 
                 additional members and 2 new mentors. Our robot, D.O, competed at the Del 
                 Rio district event, reached the finals, and won the Excellence in Engineering 
@@ -74,6 +78,8 @@
         <div class="timeline-container left">
             <div class="timeline-content">
               <h2>2021</h2>
+              <img src="images/2021 Team Photo.jpg" alt="pic" id="seasonPic"> 
+              <img src="images/2021 robot - Percy.png" alt="pic" id="seasonPic">
               <p>After a year of quarantine, we opened our lab up to limited meetings and 
                   utilized online platforms to resume our outreach activities. We were able 
                   to help our community at a vulnerable time by distributing no-contact hand 
@@ -85,6 +91,8 @@
         <div class="timeline-container right">
             <div class="timeline-content">
               <h2>2022</h2>
+              <img src="images/2022 robot hanging.JPG" alt="pic" id="seasonPic">
+              <img src="images/2022 Team Photo.JPG" alt="pic" id="seasonPic">
               <p>In this season, Rapid React, CavBots consisted of a team of 52 
                   members and a new programming mentor. We were able to build two robots this 
                   year, the practice bot “Boing 7492” and the competition bot “Artemis”. We 
@@ -100,6 +108,8 @@
         <div class="timeline-container left">
             <div class="timeline-content">
                 <h2>2023</h2>
+                <img src="images/2022 Team Photo.JPG" alt="pic" id="seasonPic">
+                <img src="images/2023 robot arm extended.jpg" alt="pic" id="seasonPic">
                 <p>In this season, Charged Up, CavBots consisted of 35 team members.
                     We were able to build two robots this year, a practice bot and the competition bot "Kraken".
                     We competed at Channelview and Amarillo and won the Creativity Award thanks to our unique suction cup vacuum system.
